[package]
name = "serde_gelf"
version = "0.1.3"
authors = ["OVH SAS <github@ovh.net>"]
edition = "2018"
license = "BSD-3-Clause"
license-file = "LICENSE"
description = "Gelf serialization using serde."
keywords = ["serde", "logs", "GELF"]
readme = "README.md"
repository = "https://github.com/ovh/rust-serde_gelf"


[features]
ovh-ldp = []

[dependencies]
serde = "1.0"
serde-value = "0.5"
serde_derive = "1.0"
log = "0.4"
hostname = "0.1"
serde_json = "1.0"