[package]
name = "serde_gelf"
version = "0.1.6"
authors = ["OVH SAS <github@ovh.net>"]
edition = "2018"
license = "BSD-3-Clause"
license-file = "LICENSE"
description = "Gelf serialization using serde."
keywords = ["serde", "logs", "GELF"]
readme = "README.md"
repository = "https://github.com/ovh/rust-serde_gelf"


[features]
ovh-ldp = ["serde-value-utils/with-schema"]

[dependencies]
hostname = "0.1"
log = "0.4"
serde = "1.0"
serde-value = "0.6"
serde-value-utils = "0.1"
serde_derive = "1.0"
serde_json = "1.0"